# unhusk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HARNESS_VALIDATION_FINDINGS.md  LICENSE  README.md  REAL_BINARY_VALIDATION.md  TURBO.md  architecture.md  context.md  prompt.md
bench/: .gitignore  BENCHMARK_RESULTS.md  CARGO_INSTALL_FIX.md  aggregate.py  corpus.txt.bak  local_corpus.txt  local_results.jsonl  parse_metrics.py  results.jsonl  run_bench.sh  run_cargo_install.sh  run_local.sh
bench/logs/: ast-grep.metrics.json  ast-grep.validate.txt  bandwhich.metrics.json  bandwhich.validate.txt  bat.metrics.json  bat.validate.txt  bingrep.metrics.json  bingrep.validate.txt  bottom.metrics.json  bottom.validate.txt  broot.metrics.json  broot.validate.txt  cargo-audit.metrics.json  cargo-audit.validate.txt  cargo-expand.metrics.json  cargo-expand.validate.txt  cargo-outdated.metrics.json  cargo-outdated.validate.txt  csview.metrics.json  csview.validate.txt  difftastic.metrics.json  du-dust.metrics.json  (+244 more)
realval/: .gitignore  ANCHOR_HEADROOM.md  BACKTRACE_SWEEP.md  CORPUS_STRESS.md  DEPTH_SWEEP.md  PRECISION_TIERS.md  RATIO_SEPARATION.md  TYPE_RECOVERY.md  backtrace_sweep.py  batch.sh  batch2.sh  build_corpus2.sh  collect.py  depth_sweep.py  ratio.py  run.sh  run2.sh  stress_analyze.py  symbol_precision.py  tier_eval.py
src/: classify.rs  dwarf.rs  elf.rs  frame.rs  lib.rs  locate.rs  main.rs  report.rs  strings.rs  types.rs  xref.rs
tests/: integration.rs
turbo-bench/: .gitignore  results.txt  run_bench.sh
writeups/: 2026-06-29-unhusk-vs-real-rust-malware.md
(+37 files in other folders)
