[package]
name = "unhusk"
version = "0.1.0"
edition = "2021"
description = "Recover user-authored logic from stripped Rust release binaries"
license = "MIT OR Apache-2.0"

[lib]
name = "unhusk"
path = "src/lib.rs"

[[bin]]
name = "unhusk"
path = "src/main.rs"

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gimli = { version = "0.31", default-features = false, features = ["read", "std"] }
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "op_code_info"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
